Bug 505896. Try to avoid invalidating plugins unnecessarily on Windows. r=jmathies